feat: support local config file with BaseProj options for easier direct use of project locally

--- a/config/console.yml
+++ b/config/console.yml
@@ -1,7 +1,9 @@
 imports:
   - {resource: console.php}
 services:
-  TJM\BaseProj\BaseProj: ~
+  TJM\BaseProj\BaseProj:
+    $shell: ~
+    $opts: '%baseProjOpts%'
   TJM\ShellRunner\ShellRunner: ~
   TJM\BaseProj\Command\:
     autowire: true
