--- a/templates/php/composer.json
+++ b/templates/php/composer.json
@@ -14,6 +14,11 @@
 			"TJM\\Project\\": "src"
 		}
 	}
+	,"autoload-dev": {
+		"psr-4": {
+			"TJM\\Project\\Tests\\": "tests"
+		}
+	}
 	,"require": {
 		"php": ">=5.3.3"
 	}
