--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	"require": {
 		"php": ">=7.2",
 		"symfony/yaml": "^5",
+		"tjm/file-merge-tasks": "^0",
 		"tjm/shell-runner": "^0",
 		"tjm/sy-console": "^1"
 	},
