feat(js): limit what files are installed via package.json managers

--- a/templates/js/package.json
+++ b/templates/js/package.json
@@ -5,5 +5,10 @@
 	"type": "module",
 	"devDependencies": {
 		"qunit": "^2.20.0"
-	}
+	},
+	"files": [
+		"license.md",
+		"readme.md",
+		"src/"
+	]
 }
